--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             "@context": "https://schema.org",
             "@type": "WebSite",
             "name": "Excel to VCF Converter",
-            "url": "https://yourwebsite.com"
+            "url": ""
         }
     </script>
     <script type="application/ld+json">
