--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
             <a href="https://keywordsfromurls.com/">Home</a>
               <a href="" target="_blank">About Us</a>
             <a href="" target="_blank">Contact Us</a>
+            </nav>
           </header>
     <div class="container">
         <h1>Excel to VCF converter </h1>
